NestedTemplate_for_DisasterRecovery/CreateNSG.json
{
	"$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {

		"NSG1-name": {
			"type": "string"
		},
		"NSG2-name": {
			"type": "string"
		},
		"NSG3-name": {
			"type": "string"
		},
		"Location": {
			"type": "string"
		},
		"subnet1-AddressPrefix": {
			"type": "string"
		},
		"subnet2-AddressPrefix": {
			"type": "string"
		},
		"subnet3-AddressPrefix": {
			"type": "string"
		},
		"subnet1-AddressPrefix-Vnet2": {
			"type": "string"
		},
		"subnet2-AddressPrefix-Vnet2": {
			"type": "string"
		},
		"subnet3-AddressPrefix-Vnet2": {
			"type": "string"
		},
		"Management-JumpBox_Subnet_AddressPrefix": {
			"type": "string"
		},
		"Management-JumpBox_Subnet_AddressPrefix-Vnet2": {
			"type": "string"
		}
	},

	"resources": [

		{
			"apiVersion": "2019-02-01",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[parameters('NSG1-name')]",
			"location": "[parameters('Location')]",
			"properties": {
				"securityRules": [{
						"name": "HTTPorHTTPS-request",
						"properties": {
							"description": "Rule for HTTP request and HTTPS SSL request ",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"sourceAddressPrefix": "*",
							"destinationPortRanges": [
								"80",
								"443"
							],
							"destinationAddressPrefix": ["[parameters('subnet1-AddressPrefix')]", "[parameters('subnet1-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 100,
							"direction": "Inbound"
						}
					},
					{
						"name": "SSHandRDP-to-WEB",
						"properties": {
							"description": "Rule for SSH and RDP Request",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"sourceAddressPrefix": ["[parameters('Management-JumpBox_Subnet_AddressPrefix')]", "[parameters('Management-JumpBox_Subnet_AddressPrefix-Vnet2')]"],
							"destinationPortRanges": [
								"22",
								"3389"
							],
							"destinationAddressPrefix": ["[parameters('subnet1-AddressPrefix')]", "[parameters('subnet1-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 110,
							"direction": "Inbound"
						}
					},
					{
						"name": "DenyOutBoundToDB",
						"properties": {
							"description": "Rule for denying Out-bound traffic to Database ",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"sourceAddressPrefix": "*",
							"destinationPortRange": "*",
							"destinationAddressPrefix": ["[parameters('subnet3-AddressPrefix')]", "[parameters('subnet3-AddressPrefix-Vnet2')]"],
							"access": "Deny",
							"priority": 100,
							"direction": "Outbound"
						}
					},
					{
						"name": "API-Web-response",
						"properties": {
							"description": "Rule for accepting response from API Server",
							"protocol": "Tcp",
							"sourcePortRange": "8083",
							"sourceAddressPrefix": ["[parameters('subnet1-AddressPrefix')]", "[parameters('subnet1-AddressPrefix-Vnet2')]"],
							"destinationPortRange": "8081",
							"destinationAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 110,
							"direction": "Outbound"
						}
					}
				]
			}
		},
		{
			"apiVersion": "2019-02-01",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[parameters('NSG2-name')]",
			"location": "[parameters('Location')]",
			"properties": {
				"securityRules": [{
						"name": "Web-request-API",
						"properties": {
							"description": "Rule for accepting requests from WEB to API ",
							"protocol": "Tcp",
							"sourcePortRange": "8083",
							"sourceAddressPrefix": ["[parameters('subnet1-AddressPrefix')]", "[parameters('subnet1-AddressPrefix-Vnet2')]"],
							"destinationPortRange": "8081",
							"destinationAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 100,
							"direction": "Inbound"
						}
					},
					{
						"name": "SSHandRDP-to-API",
						"properties": {
							"description": "Rule for SSH and RDP Request to API",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"sourceAddressPrefix": ["[parameters('Management-JumpBox_Subnet_AddressPrefix')]", "[parameters('Management-JumpBox_Subnet_AddressPrefix-Vnet2')]"],
							"destinationPortRanges": [
								"22",
								"3389"
							],
							"destinationAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 110,
							"direction": "Inbound"
						}
					},
					{
						"name": "FTPfromApi-DB",
						"properties": {
							"description": "Rule for accepting FTP requests from Database to API server",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"sourceAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"destinationPortRange": "21",
							"destinationAddressPrefix": ["[parameters('subnet3-AddressPrefix')]", "[parameters('subnet3-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 120,
							"direction": "Inbound"
						}
					},
					{
						"name": "API-MySQL-request",
						"properties": {
							"description": "Rule for MySQL request",
							"protocol": "Tcp",
							"sourcePortRange": "118",
							"sourceAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"destinationPortRange": "3306",
							"destinationAddressPrefix": ["[parameters('subnet3-AddressPrefix')]", "[parameters('subnet3-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 100,
							"direction": "Outbound"
						}
					},
					{
						"name": "API-web-response",
						"properties": {
							"description": "Rule for sending response from API - WEB",
							"protocol": "Tcp",
							"sourcePortRange": "8081",
							"sourceAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"destinationPortRange": "8083",
							"destinationAddressPrefix": ["[parameters('subnet1-AddressPrefix')]", "[parameters('subnet1-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 110,
							"direction": "Outbound"
						}
					},
					{
						"name": "FTPtoDB",
						"properties": {
							"description": "Rule for making FTP connection from API to Database server",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"sourceAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"destinationPortRange": "21",
							"destinationAddressPrefix": ["[parameters('subnet3-AddressPrefix')]", "[parameters('subnet3-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 120,
							"direction": "Outbound"
						}
					}
				]
			}
		},
		{
			"apiVersion": "2019-02-01",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[parameters('NSG3-name')]",
			"location": "[parameters('Location')]",
			"properties": {
				"securityRules": [{
						"name": "API-DB-request",
						"properties": {
							"description": "Rule for accepting MySQL request from API",
							"protocol": "Tcp",
							"sourcePortRange": "118",
							"sourceAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"destinationPortRange": "3306",
							"destinationAddressPrefix": ["[parameters('subnet3-AddressPrefix')]", "[parameters('subnet3-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 100,
							"direction": "Inbound"
						}
					},
					{
						"name": "Web-Database",
						"properties": {
							"description": "Deny direct Communication between DATABASE and WEB subnets.",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "*",
							"sourceAddressPrefix": ["[parameters('subnet1-AddressPrefix')]", "[parameters('subnet1-AddressPrefix-Vnet2')]"],
							"destinationAddressPrefix": ["[parameters('subnet3-AddressPrefix')]", "[parameters('subnet3-AddressPrefix-Vnet2')]"],
							"access": "Deny",
							"priority": 110,
							"direction": "Inbound"
						}
					},
					{
						"name": "SSHandRDP-from-admin-to-db",
						"properties": {
							"description": "Rule for SSH Request",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"sourceAddressPrefix": ["[parameters('Management-JumpBox_Subnet_AddressPrefix')]", "[parameters('Management-JumpBox_Subnet_AddressPrefix-Vnet2')]"],
							"destinationPortRanges": [
								"22",
								"3389"
							],
							"destinationAddressPrefix": ["[parameters('subnet3-AddressPrefix')]", "[parameters('subnet3-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 120,
							"direction": "Inbound"
						}
					},
					{
						"name": "FTPfromDB-API",
						"properties": {
							"description": "Rule for making FTP connection from Database to API server",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"sourceAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"destinationPortRange": "21",
							"destinationAddressPrefix": ["[parameters('subnet3-AddressPrefix')]", "[parameters('subnet3-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 130,
							"direction": "Inbound"
						}
					},
					{
						"name": "MySQL-API-response",
						"properties": {
							"description": "Rule for MySQL response to API-server",
							"protocol": "Tcp",
							"sourcePortRange": "3306",
							"sourceAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"destinationPortRange": "118",
							"destinationAddressPrefix": ["[parameters('subnet3-AddressPrefix')]", "[parameters('subnet3-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 100,
							"direction": "Outbound"
						}
					},
					{
						"name": "FTPfromDB-API-Outbound",
						"properties": {
							"description": "Rule for accepting FTP connection from Database to API server",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"sourceAddressPrefix": ["[parameters('subnet3-AddressPrefix')]", "[parameters('subnet3-AddressPrefix-Vnet2')]"],
							"destinationPortRange": "21",
							"destinationAddressPrefix": ["[parameters('subnet2-AddressPrefix')]", "[parameters('subnet2-AddressPrefix-Vnet2')]"],
							"access": "Allow",
							"priority": 110,
							"direction": "Outbound"
						}
					}
				]
			}
		}
	]

}
